--- a/VCF_tree_cover_and_landsat_images.Rmd
+++ b/VCF_tree_cover_and_landsat_images.Rmd
@@ -6,11 +6,16 @@ output: html_document
 ---
 
 Setwd, create directories and download data
+
+
 ```{r}
+
 #set working directory
 setwd('~/bin/Exercise-8')
+
 #create data map
 dir.create('Data')
+
 #download, unzip and load band images of Landsat 7
 download.file(url='https://github.com/GeoScripting-WUR/AdvancedRasterAnalysis/archive/gh-pages.zip', destfile='./Data/Landsat7')
 unzip('./Data/Landsat7')
@@ -21,16 +26,26 @@ load("AdvancedRasterAnalysis-gh-pages/data/GewataB4.rda")
 load("AdvancedRasterAnalysis-gh-pages/data/GewataB5.rda")
 load("AdvancedRasterAnalysis-gh-pages/data/GewataB7.rda")
 load("AdvancedRasterAnalysis-gh-pages/data/vcfGewata.rda")
+# Source function RMSE
+source('./R/RMSE.R')
 ```
 
+
+
 Load required packages
+
+
 ```{r}
 library(raster)
 library(sp)
 ```
+
+
 --------------------------------------------------------------------------------------------------------------------------------
 
 (1) Produce one or more plots that demonstrate the relationship between the Landsat bands and the VCF tree cover. What can you conclude from this/these plot(s)?
+
+
 ```{r}
 #make a brick of all bands with the vcf
 Gewata1 <- brick(GewataB1, vcfGewata)
@@ -39,6 +54,7 @@ Gewata3 <- brick(GewataB3, vcfGewata)
 Gewata4 <- brick(GewataB4, vcfGewata)
 Gewata5 <- brick(GewataB5, vcfGewata)
 Gewata6 <- brick(GewataB7, vcfGewata)
+
 # make a scatterplot matrix
 pairs(Gewata1)
 pairs(Gewata2)
@@ -48,61 +64,125 @@ pairs(Gewata5)
 pairs(Gewata6)
 ```
 
+
+
 Conclusions (correlation with vcf): band1 - 0.66, band2 - 0.76, band3 - 0.80, band4 - 0.18, band5 - 0.77, band7 - 0.81. The near-infrared band(4) shows very little correlation with vcf(tree cover), therefor it is not interesting for calculating the tree cover.
+
+
 --------------------------------------------------------------------------------------------------------------------------------
 
+
+
 (2) Create an lm() model and show a summary (e.g. using summary()) of the model object you created. Which predictors (bands) are probably most important in predicting tree cover?
+
+
 ```{r}
 #Remove water, cloud or cloud shadow pixels.
 vcfGewata[vcfGewata > 100] <- NA
 
 #Make a brick with all bands
 gewata <- brick(GewataB1, GewataB2, GewataB3, GewataB5, GewataB7)
+
 #Get original values
 gewata <- calc(gewata, fun=function(x) x / 10000)
 gewata <- addLayer(gewata, vcfGewata)
+
 #Change names
 names(gewata) <- c("band1", "band2", "band3", "band5", "band7", "vcf")
+
 #Make data frame
 valuetable <- getValues(gewata)
 valuetable <- as.data.frame(valuetable)
 valuetable <- na.omit(valuetable)
-#Make matrix
 
 #Execute Regression
 regression <- lm(vcf ~ band1 + band2+ band3 + band5 + band7, data=valuetable)
 summary(regression)
 ```
 
+
+
 Conclusion: Band 5 has the biggest influence on the prediction of the treecover (positive). Band 2 and band 3 probably should not be taken into account when predicting the tree cover.
+
+
+
+
 --------------------------------------------------------------------------------------------------------------------------------
 
 (3)Plot the predicted tree cover raster and compare with the original VCF raster.
+
+
+
 ```{r}
+#Predict tree cover
 predTC <- predict(gewata, model=regression, na.rm=TRUE)
 predTC[predTC<0] <- NA
-plot(predTC)
-plot(vcfGewata)
+
+#Plot both maps
+p1=spplot(vcfGewata,col.regions = colorRampPalette(c("lightblue","green", "yellow","red")), main= "Given tree cover")
+p2=spplot(predTC,zlim= c(0, 100),col.regions = colorRampPalette(c("lightblue","green", "yellow","red")), main= "Predicted tree cover")
+print(p1, position = c(0,0,.5,1),more=T)
+print(p2, position =  c(.5,0,1,1),more=T)
 ```
+
+
 
 
 Conclusion: By comparing both plots I see little difference. This was already visible in the summary of the regression; the errors are really small for instance.
+
+
 --------------------------------------------------------------------------------------------------------------------------------
 
+
+
 (4)Compute the RMSE between your predicted and the actual tree cover values
+
+
 ```{r}
-RMSE <- sqrt(mean((vcfGewata-predTC)^2))
+# prepare data for RMSE
+vcfGewata_new <- vcfGewata[predTC]
+data_predTC <- as.data.frame(predTC)
+data_predTC <- na.omit(data_predTC)
+data_vcfGewata <- as.data.frame(vcfGewata_new)
+data_vcfGewata <- na.omit(data_vcfGewata)
+
+# execute RMSE
+RMSE <- RMSE(data_vcfGewata,data_predTC)
+print(paste("The RMSE =", RMSE))
 ```
 
+
+
 (5)Are the differences between the predicted and actual tree cover the same for all of the 3 classes we used for the random forest classfication? Using the training polygons from the random forest classification, calculate the RMSE separately for each of the classes and compare. 
+
+
 ```{r}
+#load and create training raster
 load("AdvancedRasterAnalysis-gh-pages/data/trainingPoly.rda")
 trainingPoly@data$Code <- as.numeric(trainingPoly@data$Class)
 classes <- rasterize(trainingPoly, predTC, field='Code')
-zonal1 <- zonal(predTC, classes, fun(x)=sqrt(mean((vcfGewata-x)^2)))
+
+# calculate mean per class
+zonal_predTC <- zonal(predTC, classes, mean)
+zonal_vcfGewata <- zonal(vcfGewata, classes, mean)
+zonal_pred_df <- as.data.frame(zonal_predTC)
+zonal_vcfGewata_df <- as.data.frame(zonal_vcfGewata)
+source('./R/RMSE.R')
+
+#create RMSE per class
+rmse_wetland <- RMSE(zonal_pred_df[1,2], zonal_vcfGewata_df[1,2])
+rmse_forest <- RMSE(zonal_pred_df[2,2], zonal_vcfGewata_df[2,2])
+rmse_cropland <- RMSE(zonal_pred_df[3,2], zonal_vcfGewata_df[3,2])
+print(paste("The RMSE for wetland =", rmse_wetland))
+print(paste("The RMSE for forest =", rmse_forest))
+print(paste("The RMSE for cropland =", rmse_cropland))
 ```
 
-Conclusion:
+
+
+Conclusion: Predicting the tree cover in cropland gives most errors, probably because it is hard to distinguish between agricultural vegetation and trees.
+
+
 --------------------------------------------------------------------------------------------------------------------------------
 
 
