--- a/AdvancedRasterAnalysis-gh-pages/index.Rmd
+++ b/AdvancedRasterAnalysis-gh-pages/index.Rmd
@@ -137,7 +137,7 @@ A scatterplot matrix can be helpful in exploring relationships between raster la
 pairs(gewata)
 ```
 
-Note that both `hist()` and `pairs()` compute histograms and scatterplots based on a random sample of raster pixels. The size of this sample can be changed with the argument `max.pixels` in either function.
+Note that both `hist()` and `pairs()` compute histograms and scatterplots based on a random sample of raster pixels. The size of this sample can be changed with the argument `maxpixels` in either function.
 
 Calling `pairs()` on a rasterBrick reveals potential correlations between the layers themselves. In the case of bands 2-4 of the gewata subset, we can see that band 2 and 3 (in the visual part of the EM spectrum) are highly correlated, while band 4 contains significant non-redundant information. 
 
@@ -709,9 +709,12 @@ names(alldata) <- c("band1", "band2", "band3", "band4", "band5", "band7", "VCF")
 df <- as.data.frame(getValues(alldata))
 ```
 
-> Now build a `lm()` model in the same way as you build the randomForest model in [yesterday's lesson](http://geoscripting-wur.github.io/VectorRaster/)
+> Now build a `lm()` model in the same way as you build the randomForest model in 
+ [yesterday's lesson](http://geoscripting-wur.github.io/VectorRaster/)
 
-> See here for more info about `summary`: [link](http://www.r-tutor.com/elementary-statistics/simple-linear-regression/coefficient-determination)
+> See here for more info about `summary()` of the `lm` model: 
+-  [link](http://www.r-tutor.com/elementary-statistics/simple-linear-regression/coefficient-determination)
+- [alse here](http://stats.stackexchange.com/questions/5135/interpretation-of-rs-lm-output)
 
 - plot the predicted tree cover raster and compare with the original VCF raster.
 - compute the RMSE between your predicted and the actual tree cover values ([hint](https://www.kaggle.com/wiki/RootMeanSquaredError))
